--- a/src/main/resources/templates/admin/inc/menu.html
+++ b/src/main/resources/templates/admin/inc/menu.html
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/admin/products/0">
+                    <a class="nav-link" href="/admin/products/0/group">
                         <i class="material-icons">content_paste</i>
                         <p>Produkty</p>
                     </a>
